[project]
name = "hyperlore_experiments"
version = "0.1.0"
description = "HyperLore vs Sketch-NAC experiments (Hydra + WandB)"
requires-python = ">=3.9"
authors = [{name = "AI Researcher"}]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.38.0",
    "datasets>=2.14.0",
    "accelerate>=0.23.0",
    "peft>=0.8.0",
    "bitsandbytes>=0.41.1",
    "hydra-core>=1.3.2",
    "wandb>=0.16.0",
    "optuna>=3.5.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "onnxruntime-gpu>=1.15.0",
    "scipy>=1.11.0",
]
